fix: components menu overflow gradient color

--- a/dspublisher/theme/global.css
+++ b/dspublisher/theme/global.css
@@ -252,13 +252,18 @@ li.flat > ul[class] {
 
 
 li.flat.components:not([class*=expanded]) {
-  grid-template-rows: min-content 0.075fr;
+  grid-template-rows: min-content 0.095fr;
   position: relative;
   margin-bottom: var(--docs-space-xl);
 }
 
-li.flat.components > ul > li:is(:nth-child(1), :nth-child(2), :nth-child(3)) {
+li.flat.components > ul > li:is(:nth-child(1), :nth-child(2), :nth-child(3), :nth-child(4)) {
   visibility: visible;
+}
+
+li.flat.components:not([class*=expanded]) > ul > li:nth-child(4) {
+  -webkit-mask-image: linear-gradient(black, transparent 75%);
+  mask-image: linear-gradient(black, transparent 75%);
 }
 
 li.flat.components > div > [class*=toggleButton] {
@@ -272,13 +277,13 @@ li.flat.components > div > [class*=toggleButton] .visually-hidden {
 li.flat.components > div > [class*=toggleButton]::after {
   content: "Show all";
   position: absolute;
+  z-index: 1;
   bottom: 0;
   left: 0;
   right: 0;
   padding-inline-start: var(--docs-space-l);
   text-align: start;
-  padding-top: 4em;
-  background: linear-gradient(transparent, var(--docs-background-color) 50%);
+  padding-top: 3em;
   color: var(--docs-tertiary-text-color);
 }
 
